--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
 @tailwind utilities;
 body {
     font-family: 'Lora', serif;
-  }
+}
+/* In your main CSS file */
+:root {
+  --font-size-decrease: 5px;
+}
